# ScreenController

./: .gitmodules  CMakeLists.txt  README.md  install.txt
src/: App.cpp  App.h  CMakeLists.txt  main.cpp
src/app/: App.cpp  App.h  CMakeLists.txt
src/bluetooth_manager/: CMakeLists.txt  bluetooth_manager.cpp  bluetooth_manager.h  sdbus_ref
src/bluetooth_manager/dbus_implementations/: bluetooth_adapter.cpp  bluetooth_adapter.h  bluetooth_agent.cpp  bluetooth_agent.h  bluetooth_agent_manager.cpp  bluetooth_agent_manager.h  bluetooth_device.cpp  bluetooth_device.h  bluetooth_le_advertisement.cpp  bluetooth_le_advertisement.h  bluetooth_le_advertising_manager.cpp  bluetooth_le_advertising_manager.h
src/bluetooth_manager/socket/: l_2_cap_receiver.cpp  l_2_cap_receiver.h
src/bluetooth_manager/unpacker/: unpacker.cpp  unpacker.h
src/common/: CMakeLists.txt  bluetooth_packet.h  command.h  file_type.h  pixel_data.h
src/file_processor/: CMakeLists.txt  file_processor.cpp  file_processor.h
src/file_processor/decoders/: decoder.h  decoder_factory.cpp  decoder_factory.h  stb_decoder.cpp  stb_decoder.h  video_decoder.cpp  video_decoder.h  webp_decoder.cpp  webp_decoder.h
src/file_processor/models/: frame_data.h
src/graphics_renderer/: CMakeLists.txt  graphics_renderer.cpp  graphics_renderer.h
src/graphics_renderer/shader/: shader.cpp  shader.h
src/graphics_renderer/shader_files/: fragment_shader.fs  vertex_shader.vs
src/storage_manager/: CMakeLists.txt  storage_manager.cpp  storage_manager.h
src/window_manager/: CMakeLists.txt  window_manager.cpp  window_manager.h
